@@ -2,7 +2,7 @@
 Plugin URI: http://www.mmilan.com/mm-breaking-news
 Description: Displays lists of posts from selected categories whereever you like. You can select how many different lists you want, sort posts by date or random, select which categories to include or exclude from specific list.
 Author: Milan Milosevic
-Version: 0.5.2
+Version: 0.6.1
 Author URI: http://www.mmilan.com
 
 This is alternativ CSS file. If you wish to use it rename it to mm-bnlist.css (and owerite original). This one is usefull if you have blak or dark background.
